methods for singup have been added with forget password methods
